--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SearchFlickr</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="a_search_image_result">A search image result</string>
 </resources>
