--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">SearchFlickr</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="a_search_image_result">A search image result</string>
+    <string name="welcome_text">Hi there, to see some amazing pics, enter any text in the text input above and click the search button</string>
+    <string name="search_hint">enter any text to search a pic</string>
+    <string name="search_btn_title">search</string>
+    <string name="search_input_hint">Please enter a search text</string>
+    <string name="msg_no_photos">Oops, there are no images for the texts you entered.. something else</string>
 </resources>
